@@ -1,3 +1,10 @@
+2008-07-01	Nick Schermer <nick"xfce.org>
+
+	* dialogs/mouse-settings/main.c: Destroy the dialog on exit
+	  and Xfce4-mouse-settings in the version information.
+	* dialogs/mouse-settings/Makefile.am: Add the G_LOG_DOMAIN
+	  for glib warnings, errors and messages in the code.
+
 2008-06-29	Jannis Pohlmann <jannis@xfce.org>
 
 	* xfce4-settings-manager/xfce-settings-manager-dialog.c: 
